<resources>
    <string name="hello_word">Hello World!</string>
    <string name="app_name">JobPef</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="go_to_app">Go to app</string>
    <string name="load">Đang tải</string>
    <string name="who_we_are">Thông tin về ứng dung</string>
    <string name="email">Thư điện tử</string>
    <string name="message">Ý kiến của bạn</string>
    <string name="send">Gửi</string>
    <string name="name">Tên của bạn</string>
    <string name="create_new">Đăng tin tuyển dụng mới </string>
    <string name="oops_something_gone_wrong">Bạn nhập thông tin chưa chính xác !</string>
    <string name="please_fill_all_field">Vui lòng điền đẩy đủ thông tin !</string>
    <string name="email_invalid">Email của bạn chưa chính xác !</string>
    <string name="feedback">Phản Hồi - Góp Ý</string>
    <string name="notification_settings">Bật/Tắt thông báo</string>
    <string name="settings">Cài đặt</string>
    <string name="notification_history">Thông báo</string>
    <string name="message_send_success">Gửi thành công, chúng tôi ghi nhận ý kiến của bạn, và sẽ có phản hồi cần thiết !</string>
    <string name="home">Trang Chủ</string>
    <string name="developed_by">Developed by JobPef Team</string>
    <string name="share">Chia sẻ</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="ok">OK</string>
    <string name="facebook_app_id">470407896667426</string>
    <string name="name_too_short">Tên của bạn phải dài hơn 8 ký tự !</string>
    <string name="email_empty">Email của bạn đang trống !</string>
    <string name="email_error">Email của bạn chưa đúng định dạng !</string>
    <string name="password_empty">Mật khẩu của bạn phải lớn hơn 6 ký tự !</string>
    <string name="password_erro">Mật khẩu nhập lại chưa khớp !</string>
    <string name="save">Lưu</string>
    <string name="cancle_edit_info">Thay đổi thông tin</string>
    <string name="msg_notif">Bạn chưa có thông báo !</string>
    <string name="tbl_title">Danh mục việc làm</string>
    <string name="btn_Register">Đăng ký</string>
    <string name="btn_Login">Đăng nhập</string>
    <string name="btn_loginfacebook">Đăng nhập với Facebook</string>
    <string name="hint_email">Thư điện tử</string>
    <string name="hint_email_2">Thư điện tử : </string>
    <string name="hint_password">Mật Khẩu</string>
    <string name="hint_retype_password">Nhập lại password</string>
    <string name="hint_firstname_name">Họ và tên</string>
    <string name="hint_title">Nhập tiêu đề</string>
    <string name="hint_say_right">Nội dung</string>
    <string name="detail">Mô tả</string>
    <string name="category_select">Chọn danh mục tin</string>
    <string name="time_select">Chọn thời hạn tin</string>
    <string name="benifeed">Quyền lơi</string>
    <string name="requiment">Yêu cầu</string>
    <string name="hint_Enter_a_new_name">Nhập họ tên mới</string>
    <string name="hint_Enter_a_new_phonenumber">Nhập số điện thoại mới</string>
    <string name="hint_Enter_a_new_adress">Nhập địa chỉ mới</string>
    <string name="day_month_year">12&#8211;12&#8211;1992</string>
    <string name="number">1234</string>
    <string name="title">Title</string>
    <string name="first_and_last_name">Họ và tên:</string>
    <string name="phone_number">Số điện thoại:</string>
    <string name="adress">Địa chỉ :</string>
    <string name="www">www</string>
    <string name="f">f</string>
    <string name="alibaba">Alibaba</string>
    <string name="date">date</string>
    <string name="error_account">"Thông tin tài khoản không chính xác, hoặc lỗi chưa rõ, vui lòng thử lại"</string>
    <string name="error">Lỗi</string>
    <string name="register_success">Bạn đã đăng ký thành công, bạn có thể thực hiện đăng nhập</string>
    <string name="success">Thành Công</string>
    <string name="error_unkonw">Đã xảy ra lỗi, vui lòng thử lại sau </string>
    <string name="create_at">Đăng vào lúc : &#160; </string>
    <string name="time_limited">Hạn tuyển dụng : &#160; </string>
    <string name="create_by">Đăng bởi : &#160;  </string>
    <string name="address">Địa chỉ : &#160;</string>
    <string name="content">Nội dung :   </string>
    <string name="content2">Yêu cầu :  </string>
    <string name="salary">Đãi ngộ :  </string>
    <string name="select_image">Chọn ảnh đại diện</string>
    <string name="from_camera">Máy ảnh</string>
    <string name="from_galaxy">Thư viện</string>
    <string name="invail_phone">Số điện thoại không đúng </string>
    <string name="invail_address">Địa chỉ không đúng </string>
    <string name="loading">Đang tải</string>
    <string name="reset">Đăng lại</string>
    <string name="post">Post</string>
    <string name="title_empty">Tiêu đề không được bỏ trống !</string>
    <string name="content_empty">Nội dung không được bỏ trống !</string>
    <string name="category_empty">Bạn phải chọn danh mục đăng tin !</string>
    <string name="requiment_empty"> Yêu cầu không được bỏ trống !</string>
    <string name="benifed_empty">Quyền lợi không được bỏ trống !</string>
    <string name="time_empty">Thời hạn tin không được bỏ trống !</string>
    <string name="create_post_success"> Bài đăng của bạn đã thành công !</string>
    <string name="register_facebook">Đăng ký với facebook </string>
    <string name="nodata">Chưa có dữ liệu !</string>
    <string name="create_post">Đăng tin</string>
    <string name="hello">Xin chào,</string>
    <string name="image_empty">Bạn phải chọn ảnh !</string>
    <string name="search">Tìm kiếm</string>
    <string name="search_hint">Nhập công việc bạn muốn tìm kiếm </string>
    <string name="search_to">Từ khoá bạn nhập phải bằng tiếng việt có dấu , không chứa ký tự đặc biệt như !, @, # ...</string>
    <string name="find_error">Không tìm thấy công việc bạn muốn tìm kiếm, thử với từ khoá khác !</string>
    <string name="info_app">Ứng dụng đăng tin, tìm việc hoàn toàn miễn phí trên thiết bị Android được xây dựng bởi JobPef TEAM , môn Dự Án 2</string>
</resources>
