<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="@string/name"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtName"
            style="@style/edtTextStyle"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/email"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtEmail"
            style="@style/edtTextStyle"
            android:layout_height="48dp"
            android:layout_marginBottom="10dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/message"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtMessage"
            style="@style/edtTextStyle"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="top|"
            android:inputType="text"
            android:textSize="15sp" />


    </LinearLayout>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@color/side_menu_bg"
        android:text="@string/send"
        android:textColor="@color/white"
        android:textSize="15sp" />
</RelativeLayout>