<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <LinearLayout
        android:paddingTop="3dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <EditText
            android:background="@drawable/bg_black"
            android:id="@+id/edtSearch"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:drawableRight="@drawable/ic_back"
            android:hint="@string/search_hint"
            android:paddingLeft="3dp" />

        <TextView
            android:paddingTop="2dp"
            android:textColor="@color/blue_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="2dp"
            android:text="@string/search_to" />

        <Button
            android:background="@drawable/bg_shore"
            android:layout_marginTop="2dp"
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/search" />

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rcSearch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="3dp" />

</LinearLayout>