<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:adjustViewBounds="true"
                android:paddingTop="5dp"
                android:scaleType="centerInside"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_home"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_home" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/home"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ultra_dark_gray" />

                <LinearLayout
                    android:id="@+id/layout_setting"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_settings" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/settings"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ultra_dark_gray" />

                <LinearLayout
                    android:id="@+id/layout_contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_contact" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/feedback"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ultra_dark_gray" />

                <LinearLayout
                    android:id="@+id/layout_who_we_are"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_group" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/who_we_are"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/ultra_dark_gray" />

                <LinearLayout
                    android:id="@+id/layout_share"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:src="@drawable/ic_share" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/share"
                        android:textColor="@color/white"
                        android:textSize="16sp" />

                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:gravity="bottom">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_blue"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDevelopedBy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/light_blue"
                    android:gravity="center"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp"
                    android:text="@string/developed_by"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/light_blue"
                    android:src="@drawable/mustachee_blank" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>