<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/home_bg" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/layoutPreview"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:visibility="gone">

                    <ImageView
                        android:scaleType="centerCrop"
                        android:id="@+id/imgPreview"
                        android:layout_width="match_parent"
                        android:layout_height="250dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:background="@color/black_alpha30" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:src="@drawable/ic_youtube" />
                </RelativeLayout>


                <android.support.v4.view.ViewPager
                    android:id="@+id/pagerPreview"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:background="@color/white" />

                <com.viewpagerindicator.CirclePageIndicator
                    android:id="@+id/circlePageIndicator"
                    android:layout_width="match_parent"
                    android:layout_height="6dp"
                    android:layout_below="@id/pagerPreview"
                    android:layout_marginTop="5dp"
                    app:fillColor="@color/indication_fill_color"
                    app:pageColor="@color/indication_page_color"
                    app:radius="3dp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/imgBanner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:scaleType="centerCrop"
                android:visibility="visible" />

            <LinearLayout
                android:background="@color/white"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|end"
                        android:paddingBottom="5dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/day_month_year"
                        android:textColor="@color/gray"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvCategoryName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:gravity="right"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:paddingTop="5dp"
                        android:text="@string/number"
                        android:textColor="@color/dark_blue"
                        android:textSize="12sp" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" />

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/title"
                    android:textColor="@color/dark_blue"
                    android:textSize="12sp" />


            </LinearLayout>

            <WebView
                android:id="@+id/wvDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>